<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.android.espressotest.OnViewActivity1"
    tools:ignore="RtlHardcoded, Autofill, HardcodedText">

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_header_reply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="invisible"
        android:contentDescription="@string/description_text_header_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="hahaha"/>

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        android:contentDescription="@string/description_text_message_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header_reply" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_send"
        android:onClick="launchSecondActivity"
        android:contentDescription="@string/description_button_send"
        app:layout_constraintStart_toEndOf="@id/editText_activity1"
        app:layout_constraintTop_toTopOf="@id/editText_activity1"
        app:layout_constraintBottom_toBottomOf="@id/editText_activity1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_activity1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/editText_main"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toStartOf="@+id/button_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message_reply"
        tools:text="editText_activity1"/>

    <ScrollView
        android:id="@+id/scrollview_activity1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_activity1"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollview_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scrollview_margin"
            android:paddingBottom="@dimen/scrollview_padding">

            <ImageView
                android:id="@+id/scrollview_header_image"
                android:layout_width="@dimen/scrollview_image_size"
                android:layout_height="@dimen/scrollview_image_size"
                android:contentDescription="@string/description_header_image"
                android:scaleType="fitXY"
                android:src="@drawable/ic_android_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/scrollview_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scrollview_margin"
                android:text="@string/scrollview_textview"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/scrollview_textview_size"
                android:contentDescription="@string/description_scrollview_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_header_image"
                tools:text="@string/scrollview_textview" />

            <Button
                android:id="@+id/scrollview_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scrollview_padding"
                android:padding="@dimen/scrollview_button_padding"
                android:text="@string/just_click"
                android:contentDescription="@string/description_scrollview_button"
                app:layout_constraintEnd_toStartOf="@id/scrollview_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_textview" />

            <TextView
                android:id="@+id/scrollview_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/scrollview_textview_size"
                android:contentDescription="@string/description_scrollview_button_text"
                app:layout_constraintBottom_toBottomOf="@id/scrollview_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/scrollview_button"
                app:layout_constraintTop_toTopOf="@id/scrollview_button"
                tools:text="@string/click_times" />

            <Switch
                android:id="@+id/scrollview_switch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scrollview_margin"
                android:contentDescription="@string/description_scrollview_switch"
                app:layout_constraintEnd_toStartOf="@id/scrollview_switch_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_button_text" />

            <TextView
                android:id="@+id/scrollview_switch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_off"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/scrollview_textview_size"
                android:contentDescription="@string/description_scrollview_switch_text"
                app:layout_constraintBottom_toBottomOf="@id/scrollview_switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/scrollview_switch"
                app:layout_constraintTop_toTopOf="@id/scrollview_switch"
                tools:text="@string/switch_off" />

            <ImageView
                android:id="@+id/scrollview_footer_image"
                android:layout_width="@dimen/scrollview_image_size"
                android:layout_height="@dimen/scrollview_image_size"
                android:layout_marginTop="@dimen/scrollview_margin"
                android:contentDescription="@string/description_footer_image"
                android:scaleType="fitXY"
                android:src="@drawable/ic_smile_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollview_switch_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
